--- a/시작-white.html
+++ b/시작-white.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>MEMO</title>
     <style>
-
+      html,body{height:100%;}
       div{
         text-align:center;
         }
