--- a/시작-black.html
+++ b/시작-black.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>MEMO</title>
     <style>
+      html,body{height:100%;}
       body{
         background:black;
       }
