--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       html,body{height:100%;}
       </style>
   </head>
-  <body>
-    <iframe src="MEMO.html" name="main"width="100%" height="100%" frameborder="no" style="overflow:hidden"></iframe>
+  <body style="overflow:hidden;"marginheight="0" marginwidth="0 ">
+    <iframe src="MEMO.html" name="main"width="100%" height="100%" frameborder="no"   ></iframe>
   </body>
 </html>
