--- a/MEMO.html
+++ b/MEMO.html
@@ -5,10 +5,8 @@
     <title>MEMO</title>
     <style>
 
-      div{
-        text-align:center;
-        }
-        .black{
+
+      .black{
           display:none;
         }
       .blacknav {
@@ -89,7 +87,8 @@
   document.querySelector('.black').style.display='none';
   document.querySelector('.white').style.display='block';
   document.querySelector('.blacknav').style.display='none';
-  document.querySelector('.whitenav').style.display='block';">
+  document.querySelector('.whitenav').style.display='block';
+  ">
   WHITE
 </button>
 
@@ -97,6 +96,9 @@
     </p>
     <br>
     <section>
+      <p>
+        메인페이지 입니다.
+      </p>
 
     </section>
   </body>
