--- a/게임방법-white.html
+++ b/게임방법-white.html
@@ -5,7 +5,7 @@
     <title>MEMO</title>
     <style>
 
-        #btn_black{
+      #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
         margin-right:-4px;
@@ -44,7 +44,7 @@
     <header>
       <p>
         <div class="white"><a href="index.html"><img  src="title-white.jpg" width="300px"></a></div>
-    </p>
+      </p>
     </header>
 
     <nav>
@@ -55,12 +55,11 @@
       <a href="명예의 전당-white.html"><img class="nav1" src="명예의 전당-white.jpg"></a>
       <a href="문의-white.html"><img class="nav1" src="문의-white.jpg"></a>
     </p>
-
     </nav>
 
     <p>
 <div id="btn_group">
-  <a href="시작-black.html"><button id="btn_black" >
+  <a href="게임방법-black.html"><button id="btn_black" >
   BLACK
 </button></a>
   <button id="btn_white" >
@@ -72,9 +71,7 @@
     <br>
     <section>
       <p>
-        <img class="center" src="MEMO.jpg" width="500px" usemap="#start">
-        <map name="start" id='start'>
-        <area shape="rect" coords="230,260,280,290" href="white-1.html">
+        게임방법
       </p>
     </section>
   </body>
