--- a/시작-black.html
+++ b/시작-black.html
@@ -4,19 +4,14 @@
     <meta charset="utf-8">
     <title>MEMO</title>
     <style>
-      html,body{height:100%;}
       body{
         background:black;
+        color:white;
       }
       div{
         text-align:center;
         }
-        .white{
-          display:none;
-        }
-      .whitenav {
-        display:none;
-      }
+
       #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
@@ -55,19 +50,12 @@
 
     <header>
       <p>
-        <div class="white"><a href="index.html"><img  src="title-white.jpg" width="300px"></a></div>
-        <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
+            <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
     <nav>
-    <p class="whitenav">
-      <a href="시작-white.html"><img class="nav1" src="시작-white.jpg"></a>
-      <a href="게임방법-white.html"><img class="nav1" src="게임방법-white.jpg"></a>
-      <a href="제작진-white.html"><img class="nav1" src="제작진-white.jpg"></a>
-      <a href="명예의 전당-white.html"><img class="nav1" src="명예의 전당-white.jpg"></a>
-      <a href="문의-white.html"><img class="nav1" src="문의-white.jpg"></a>
-    </p>
+
     <p class="blacknav">
       <a href="시작-black.html"><img class="nav2" src="시작-black.jpg"></a>
       <a href="게임방법-black.html"><img class="nav2" src="게임방법-black.jpg"></a>
@@ -93,8 +81,10 @@
       <p>
         <img class="center" src="MEMO.jpg" width="500px" usemap="#start">
         <map name="start" id='start'>
-        <area shape="rect" coords="230,260,280,290" href="">
+        <area shape="rect" coords="230,260,280,290" href="black-1.html">
+
       </p>
+
     </section>
   </body>
 </html>
