--- a/제작진-white.html
+++ b/제작진-white.html
@@ -5,7 +5,8 @@
     <title>MEMO</title>
     <style>
 
-        #btn_black{
+
+      #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
         margin-right:-4px;
@@ -44,7 +45,7 @@
     <header>
       <p>
         <div class="white"><a href="index.html"><img  src="title-white.jpg" width="300px"></a></div>
-    </p>
+      </p>
     </header>
 
     <nav>
@@ -60,7 +61,7 @@
 
     <p>
 <div id="btn_group">
-  <a href="시작-black.html"><button id="btn_black" >
+  <a href="제작진-black.html"><button id="btn_black" >
   BLACK
 </button></a>
   <button id="btn_white" >
@@ -72,9 +73,7 @@
     <br>
     <section>
       <p>
-        <img class="center" src="MEMO.jpg" width="500px" usemap="#start">
-        <map name="start" id='start'>
-        <area shape="rect" coords="230,260,280,290" href="white-1.html">
+        제작진
       </p>
     </section>
   </body>
