--- a/시작-black.html
+++ b/시작-black.html
@@ -8,7 +8,9 @@
         background:black;
         color:white;
       }
-      
+      div{
+        text-align:center;
+        }
 
       #btn_black{
         border-top-left-radius: 5px;
