목차와 메인페이지 연결

--- a/white-1.html
+++ b/white-1.html
@@ -14,7 +14,10 @@
 
     <header>
       <p>
-        <div><h1>  white-1 문제제목  </h1></div>
+        <div class="white"><a href="MEMO.html"><img  src="title-white.jpg" width=250px"></a></div>
+      </p>
+        <p>
+        <div><h2>  white-1 문제제목  </h2></div>
       </p>
     </header>
 
