--- a/게임방법-black.html
+++ b/게임방법-black.html
@@ -9,7 +9,7 @@
         color:white;
       }
 
-        
+
       #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
@@ -48,7 +48,7 @@
 
     <header>
       <p>
-        <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
+        <div class="black"><a href="MEMO-black.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
