--- a/시작-white.html
+++ b/시작-white.html
@@ -43,7 +43,7 @@
 
     <header>
       <p>
-        <div class="white"><a href="index.html"><img  src="title-white.jpg" width="300px"></a></div>
+        <div class="white"><a href="MEMO.html"><img  src="title-white.jpg" width="300px"></a></div>
     </p>
     </header>
 
