--- a/MEMO-black.html
+++ b/MEMO-black.html
@@ -5,6 +5,11 @@
     <title>MEMO</title>
     <style>
 
+      body{
+        background-color:black;
+        color:white;
+      }
+
       #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
@@ -36,43 +41,44 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
-    <script>
+   <script>
     if(!(parent && parent!=this))
     location.href='wrong.html';
   </script>
 
     <header>
       <p>
-        <div class="white"><a href="MEMO.html"><img  src="title-white.jpg" width="300px"></a></div>
+        <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
     <nav>
-    <p class="whitenav">
-      <a href="시작-white.html"><img class="nav1" src="시작-white.jpg"></a>
-      <a href="게임방법-white.html"><img class="nav1" src="게임방법-white.jpg"></a>
-      <a href="제작진-white.html"><img class="nav1" src="제작진-white.jpg"></a>
-      <a href="명예의 전당-white.html"><img class="nav1" src="명예의 전당-white.jpg"></a>
-      <a href="문의-white.html"><img class="nav1" src="문의-white.jpg"></a>
+    <p class="blacknav">
+      <a href="시작-black.html"><img class="nav2" src="시작-black.jpg"></a>
+      <a href="게임방법-black.html"><img class="nav2" src="게임방법-black.jpg"></a>
+      <a href="제작진-black.html"><img class="nav2" src="제작진-black.jpg"></a>
+      <a href="명예의 전당-black.html"><img class="nav2" src="명예의 전당-black.jpg"></a>
+      <a href="문의-black.html"><img class="nav2" src="문의-black.jpg"></a>
     </p>
     </nav>
 
     <p>
 <div id="btn_group">
-  <a href="문의-black.html"><button id="btn_black" >
+  <button id="btn_black" >
   BLACK
-</button></a>
-  <button id="btn_white" >
-  WHITE
 </button>
+<a href="MEMO.html" > <button id="btn_white" >
+  WHITE
+</button></a>
 
     </div>
     </p>
     <br>
     <section>
       <p>
-        문의
+        메인페이지 입니다.
       </p>
+
     </section>
   </body>
 </html>
