--- a/MEMO.html
+++ b/MEMO.html
@@ -6,12 +6,7 @@
     <style>
 
 
-      .black{
-          display:none;
-        }
-      .blacknav {
-        display:none;
-      }
+
       #btn_black{
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
@@ -51,7 +46,6 @@
     <header>
       <p>
         <div class="white"><a href="index.html"><img  src="title-white.jpg" width="300px"></a></div>
-        <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
@@ -63,32 +57,14 @@
       <a href="명예의 전당-white.html"><img class="nav1" src="명예의 전당-white.jpg"></a>
       <a href="문의-white.html"><img class="nav1" src="문의-white.jpg"></a>
     </p>
-    <p class="blacknav">
-      <a href="시작-black.html"><img class="nav2" src="시작-black.jpg"></a>
-      <a href="게임방법-black.html"><img class="nav2" src="게임방법-black.jpg"></a>
-      <a href="제작진-black.html"><img class="nav2" src="제작진-black.jpg"></a>
-      <a href="명예의 전당-black.html"><img class="nav2" src="명예의 전당-black.jpg"></a>
-      <a href="문의-black.html"><img class="nav2" src="문의-black.jpg"></a>
-    </p>
     </nav>
 
     <p>
 <div id="btn_group">
-  <button id="btn_black" onclick="document.querySelector('body').style.backgroundColor='black';
-  document.querySelector('body').style.color='white';
-  document.querySelector('.white').style.display='none';
-  document.querySelector('.black').style.display='block';
-  document.querySelector('.whitenav').style.display='none';
-  document.querySelector('.blacknav').style.display='block';">
+  <a href="MEMO-black.html"><button id="btn_black" >
   BLACK
-</button>
-  <button id="btn_white" onclick="document.querySelector('body').style.backgroundColor='white';
-  document.querySelector('body').style.color='black';
-  document.querySelector('.black').style.display='none';
-  document.querySelector('.white').style.display='block';
-  document.querySelector('.blacknav').style.display='none';
-  document.querySelector('.whitenav').style.display='block';
-  ">
+</button></a>
+  <button id="btn_white" >
   WHITE
 </button>
 
