--- a/black-1.html
+++ b/black-1.html
@@ -8,7 +8,7 @@
         background:black;
         color:white;
       }
-  
+
 
 
     </style>
@@ -22,7 +22,10 @@
 
     <header>
       <p>
-        <div><h1>  black-1 문제제목  </h1></div>
+        <div class="black"><a href="MEMO-black.html"><img  src="title-black.jpg" width="250px"></a></div>
+      </p>
+        <p>
+        <div><h2>black-1 문제제목</h2></div>
       </p>
     </header>
 
