--- a/문의-black.html
+++ b/문의-black.html
@@ -48,7 +48,7 @@
 
     <header>
       <p>
-        <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
+        <div class="black"><a href="MEMO-black.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
