--- a/시작-black.html
+++ b/시작-black.html
@@ -50,7 +50,7 @@
 
     <header>
       <p>
-            <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
+            <div class="black"><a href="MEMO-black.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
