--- a/제작진-black.html
+++ b/제작진-black.html
@@ -8,7 +8,7 @@
         background:black;
         color:white;
       }
-      
+
         .white{
           display:none;
         }
@@ -53,7 +53,7 @@
 
     <header>
       <p>
-            <div class="black"><a href="index.html"><img  src="title-black.jpg" width="300px"></a></div>
+            <div class="black"><a href="MEMO-black.html"><img  src="title-black.jpg" width="300px"></a></div>
       </p>
     </header>
 
