문제 1번 업로드 & 기본 페이지 서식 완료

--- a/MEMO.html
+++ b/MEMO.html
@@ -57,8 +57,6 @@
       <a href="명예의 전당-white.html"><img class="nav1" src="명예의 전당-white.jpg"></a>
       <a href="문의-white.html"><img class="nav1" src="문의-white.jpg"></a>
     </p>
-    </nav>
-
     <p>
 <div id="btn_group">
   <a href="MEMO-black.html"><button id="btn_black" >
@@ -70,9 +68,12 @@
 
     </div>
     </p>
+    </nav>
+
+
     <br>
     <section>
-      <p>
+      <p class="left">
         메인페이지 입니다.
       </p>
 
