--- a/명예의 전당-black.html
+++ b/명예의 전당-black.html
@@ -76,7 +76,9 @@
   </p>
     <br>
     <section>
-    <p>명예의 전당</p>
+    <p class="left">
+      명예의 전당
+    </p>
     </section>
   </body>
 </html>
