--- a/제작진-black.html
+++ b/제작진-black.html
@@ -81,8 +81,20 @@
   </p>
     <br>
     <section>
-      <p>
-        제작진
+      <p class="left">
+        <p class="left"><h3>제작진</h3></p>
+        <p class="left">
+          <span class="yellow">개발자</span><br>
+          sinho419
+        </p>
+        <p class="left">
+          <span class="yellow">디자인</span><br>
+          _oscarsierra_ mingyeong53
+        </p>
+        <p class="left">
+          <span class="yellow">문제제작</span><br>
+          sinho419 takeu_onfaia _oscarsierra_ mingyeong53 sangjun_khg jaehing2
+        </p>
       </p>
     </section>
   </body>
